# dalife

./: .pre-commit-config.yaml  README.md  pyproject.toml
dalife/: manage.py
dalife/dalife/: asgi.py  settings.py  urls.py  wsgi.py
