[tool.poetry]
name = "dalife"
version = "0.1.0"
description = "Life at De Anza College"
authors = ["Robin Rheem <robinrheem@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
